--- a/Instagram-Report-bot-main/vercel.json
+++ b/Instagram-Report-bot-main/vercel.json
@@ -8,12 +8,19 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/api/set-webhook",
+      "dest": "api/index.py"
+    },
+    {
+      "src": "/api/webhook",
       "dest": "api/index.py"
     },
     {
       "src": "/(.*)",
       "dest": "api/index.py"
     }
-  ]
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.12"
+  }
 }
