--- a/Instagram-Report-bot-main/vercel.json
+++ b/Instagram-Report-bot-main/vercel.json
@@ -2,11 +2,19 @@
   "version": 2,
   "builds": [
     {
+      "src": "api/test.py",
+      "use": "@vercel/python"
+    },
+    {
       "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
+    {
+      "src": "/api/test",
+      "dest": "api/test.py"
+    },
     {
       "src": "/api/set-webhook",
       "dest": "api/index.py"
@@ -19,8 +27,5 @@
       "src": "/(.*)",
       "dest": "api/index.py"
     }
-  ],
-  "env": {
-    "PYTHON_VERSION": "3.12"
-  }
+  ]
 }
